--- a/testimonial slider/index.html
+++ b/testimonial slider/index.html
@@ -9,6 +9,27 @@
 </head>
 <body>
     
+    <div class="container">
+        <h3>What Clients Say</h3>
+        <h5>Lorem ipsum dolor sit, amet consectetur adipisicing elit..</h5>
+
+        <div class="card">
+            <img src="images/1.jpg" alt="" id="customer-img" class="img-card">
+            <h4 id="customer-name">Customer Name</h4>
+            <div class="review">
+                <span class="star"><i class="fas fa-star"></i></span>
+                <span class="star"><i class="fas fa-star"></i></span>
+                <span class="star"><i class="fas fa-star"></i></span>
+                <span class="star"><i class="fas fa-star"></i></span>
+                <span class="star"><i class="fas fa-star-half"></i></span>
+            </div>
+
+            <p id="customer-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim exercitationem debitis accusantium animi nesciunt beatae iusto incidunt veniam vitae voluptates, officiis excepturi corrupti porro quia dolorem, alias sunt laboriosam quae!</p>
+
+            <a href="#" class="btn prevBtn"><i class="fas fa-long-arrow-alt-left"></i></a>
+            <a href="#" class="btn nextBtn"><i class="fas fa-long-arrow-alt-right"></i></a>
+        </div>
+    </div>
 
     <script src="app.js"></script>
 </body>
